--- a/trunk/uniSalud/css/style.css
+++ b/trunk/uniSalud/css/style.css
@@ -26,7 +26,7 @@ p {padding-bottom:20px}
 /* header */
 header {width:100%;overflow:hidden;padding-bottom:22px}
 #logo {display:block;background:url(../images/logo.png) no-repeat;width:192px;height:58px;text-indent:-5000px}
-#menu {float:right;padding-top:30px;padding-bottom:5px}
+#menu {float:left;padding-top:25px;padding-bottom:5px;padding-left: 200px}
 #menu li {float:left;padding-right:9px;background:url(../images/menu_line.png) right 6px no-repeat;margin-right:8px}
 #menu .bg_none {background:none;padding:0;margin:0}
 #menu li a {display:block;font-size:16px;font-weight:400;color:#fff;line-height:31px;padding:0 9px;text-decoration:none;position:relative;behavior:url(js/PIE.htc)}
