se creo la vista principal, el controlador del registro, se arreglo la vista de registro, se incluyeron validaciones, falta la parte de programas y facultades y sus validaciones, existe una inconsistencia en la base de datos por parte del medico puesto a que se ha decidido poner varias especialidades por cada medico.

--- a/trunk/uniSalud/css/layout.css
+++ b/trunk/uniSalud/css/layout.css
@@ -8,7 +8,7 @@
 #page1 .text1 {font-size:40px;font-weight:300;color:#fff;line-height:48px;padding:37px 0 15px 0}
 #page1 header p {padding-bottom:50px}
 /* index-1.html */
-#page2 .col2 {width:345px}
+/*#page2 .col2 {width:345px}*/
 /* index-2.html */
 #page3 .col3 {width:258px}
 #page3 .col2 {width:570px}
