--- a/trunk/uniSalud/css/style.css
+++ b/trunk/uniSalud/css/style.css
@@ -39,7 +39,7 @@ header .link1 {text-decoration:none}
 header .link1:hover {text-decoration:underline}
 /* content */
 #content_top {width:100%;overflow:hidden;padding-bottom:20px}
-#content {width:100%;overflow:hidden;padding-bottom:52px}
+#content {width:100%;overflow:hidden;padding-bottom:1%;}
 .pad_left1 {padding-left:37px}
 .pad_left2 {padding-left:20px}
 .pad_bot1 {padding-bottom:20px}
@@ -72,3 +72,85 @@ footer a {color:#dfd2e7}
 #ContactForm a {margin-left:24px;margin-top:8px}
 #ContactForm .input {float:left;width:307px;height:16px;border:1px solid #d5d5d5;background:#fff;padding:3px 6px;margin-bottom:6px;color:#4e4e4e;font:13px Arial, Helvetica, sans-serif}
 #ContactForm textarea {overflow:auto;float:left;width:742px;height:350px;border:1px solid #d5d5d5;background:#fff;padding:3px 6px;margin-bottom:0;color:#4e4e4e;font:13px Arial, Helvetica, sans-serif}
+#tabla
+{
+	font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+	font-size: 15px;
+	width: 100%;
+	text-align: left;
+	border-collapse: collapse;
+	background: url('http://localhost/unisalud/images/patternb.png');
+}
+#tabla thead tr
+{
+	background: url('http://localhost/unisalud/images/patternb-head.png');
+}
+#tabla th
+{
+	font-size: 13px;
+	font-weight: normal;
+	padding: 8px;
+	border-bottom: 1px solid #fff;
+	color: #039;
+}
+#tabla td
+{
+	padding: 8px; 
+	border-bottom: 1px solid #fff;
+	color: #669;
+	border-top: 1px solid transparent;
+}
+#tabla tbody tr:hover td
+{
+	color: #339;
+	background: #cdcdee;
+}
+
+#btnAgregar {
+    background: url(../images/menu_bg.gif);
+    border-radius: 5px;
+    margin-top: 2%;
+    margin-left: 2%;
+    padding: 6px;
+}
+#btnTabla {
+    background: url(../images/menu_bg.gif);
+    border-radius: 3px;
+    margin-top: 1%;
+    margin-left: 1%;
+    padding: 4px;
+    display: inline;
+}
+.boton:hover{
+    cursor: pointer;
+}
+#paginacion h3
+{
+    background:url(../images/patternb-head.png);
+    font-size:18px;
+    font-weight:200;
+    color: #039;
+}
+#paginacion a
+{
+    color: #339;
+    text-decoration:underline;
+    outline:none
+}
+#tablaForm input{
+    background: url('../images/back.png');
+    border-radius: 5px;
+}
+#tablaForm #btnAgregar{
+   background: url(../images/menu_bg.gif);
+    border-radius: 5px;
+    margin-top: 2%;
+    margin-left: 2%;
+    padding: 6px;
+}
+#tablaForm td{
+    padding: 10px;
+}
+#mensaje {
+    margin: 1%;
+}
